--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "morgan": "~1.9.1",
-    "ts-dotenv": "^0.9.1"
+    "nodemailer": "^6.9.9",
+    "ts-dotenv": "^0.9.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -31,6 +33,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
   }
